--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "watch": "nodemon server.js"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "dependencies": {
     "alt": "^0.17.8",
@@ -42,6 +45,9 @@
     "babelify": "^7.2.0",
     "bower": "^1.6.5",
     "browserify": "^12.0.1",
+    "eslint": "^3.7.1",
+    "eslint-plugin-html": "^1.5.3",
+    "eslint-plugin-markdown": "^1.0.0-beta.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
